; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/trace/extr_ftrace.c_unregister_ftrace_function.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/trace/extr_ftrace.c_unregister_ftrace_function.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ftrace_ops = type { i32 }

@ftrace_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @unregister_ftrace_function(%struct.ftrace_ops* %0) #0 {
  %2 = alloca %struct.ftrace_ops*, align 8
  %3 = alloca i32, align 4
  store %struct.ftrace_ops* %0, %struct.ftrace_ops** %2, align 8
  %4 = call i32 @mutex_lock(i32* @ftrace_lock)
  %5 = load %struct.ftrace_ops*, %struct.ftrace_ops** %2, align 8
  %6 = call i32 @__unregister_ftrace_function(%struct.ftrace_ops* %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %12, label %9

9:                                                ; preds = %1
  %10 = load %struct.ftrace_ops*, %struct.ftrace_ops** %2, align 8
  %11 = call i32 @ftrace_shutdown(%struct.ftrace_ops* %10, i32 0)
  br label %12

12:                                               ; preds = %9, %1
  %13 = call i32 @mutex_unlock(i32* @ftrace_lock)
  %14 = load i32, i32* %3, align 4
  ret i32 %14
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @__unregister_ftrace_function(%struct.ftrace_ops*) #1

declare dso_local i32 @ftrace_shutdown(%struct.ftrace_ops*, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
